--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,14 @@
   font-size: large;
 }
 
+.wrapit {
+  white-space: pre-wrap;
+}
+
+.encryptedMessage {
+  text-align: left;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
